Fix overlapping sidebar and blog navigation in some resolutions.

--- a/xubuntu-fourteen/style.css
+++ b/xubuntu-fourteen/style.css
@@ -1,8 +1,7 @@
 /*
  *  Theme Name: Xubuntu Fourteen
  *  Description: A theme built for the Xubuntu website. Features multiple widget areas in the frontpage.
- *  Author: Pasi Lallinaho
- *  Version: 02.14
+ *  Author: Pasi Lallinaho: 02.14
  *  Author URI: http://open.knome.fi/
  *  Theme URI: https://xubuntu.org/
  *
@@ -348,10 +347,6 @@ ul.menu li.external:hover { background-image: url(images/external-hover.png); }
 /*  Blog browsing
  *
  */
-
-body.archive #main {
-	width: 90%;
-}
 
 #browse {
 	width: 100%;
